Added food page, implemented scrolling section

--- a/TillApp/TillApp/TillApp/TillApp.csproj
+++ b/TillApp/TillApp/TillApp/TillApp.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Page1.xaml">
+    <EmbeddedResource Update="FoodPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
