--- a/TillApp/TillApp/TillApp/TillApp.csproj
+++ b/TillApp/TillApp/TillApp/TillApp.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.15" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
 
